--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
-  
 
+.yoopta-editor {
+  max-width: 786px !important;
+  width: 100% !important;
+}
 
 @layer base {
   :root {
@@ -72,5 +77,5 @@
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  background: #bfbfbf; 
+  background: #bfbfbf;
 }
