Adder sidebar content

--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  background: #bfbfbf;
+  background: #e6e6e6;
 }
 
 .dark .yoopta-block-actions-plus,
@@ -128,5 +128,4 @@
 
 body {
   pointer-events: auto !important;
-  }
-
+}
